k8s-ci/kubernetes/cloud-service-k8s-cloud-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-service-consumer-cloud-starter-deployment
  namespace: spring-kubernetes-cloud
  labels:
    app: cloud-service-consumer-cloud-starter-deployment
spec:
  replicas: 1
  template:
    metadata:
      name: cloud-service-consumer-cloud-starter-deployment
      labels:
        app: cloud-service-consumer-cloud-starter-deployment
    spec:
      containers:
        - name: spring-kubernetes-cloud-deployment
          image: dockereddie/cloud-service-consumer-cloud-starter:1.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      restartPolicy: Always
      serviceAccountName: cloud-service-k8s-service-account
  selector:
    matchLabels:
      app: cloud-service-consumer-cloud-starter-deployment
