k8s-ci/kubernetes/micro-service-router-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-service-router
  namespace: spring-kubernetes-cloud
  labels:
    app: micro-service-router
spec:
  replicas: 1
  template:
    metadata:
      name: micro-service-router
      labels:
        app: micro-service-router
    spec:
      containers:
        - name: spring-kubernetes-cloud-deployment
          image: registry.cn-shanghai.aliyuncs.com/xinwen/micro-service-router:2023-06-20-17-54-21
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      restartPolicy: Always
      serviceAccountName: cloud-service-k8s-service-account
  selector:
    matchLabels:
      app: micro-service-router
