k8s-ci/kubernetes/cloud-service-center-domain-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-service-center-service
  namespace: spring-kubernetes-cloud
spec:
  selector:
    app: cloud-service-center-domain-service-deployment
  ports:
    - port: 8081
      targetPort: 8080
      nodePort: 30010
  type: NodePort
