k8s-ci/kubernetes/cloud-service-k8s-cloud-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-service-consumer-service
  namespace: spring-kubernetes-cloud
spec:
  selector:
    app: cloud-service-consumer-cloud-starter-deployment
  ports:
    - port: 8082
      targetPort: 8080
      nodePort: 30011
  type: NodePort
