k8s-ci/kubernetes/cloud-service-k8s-cloud-provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-service-provider-service
  namespace: spring-kubernetes-cloud
spec:
  selector:
    app: cloud-service-provider-cloud-starter-deployment
  ports:
    - port: 8083
      targetPort: 8080
      nodePort: 30012
  type: NodePort
