k8s-ci/kubernetes/micro-service-router-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-kubernetes-service
  namespace: spring-kubernetes-cloud
spec:
  selector:
    app: micro-service-router-service
  ports:
    - port: 8080
      targetPort: 8000
      nodePort: 30009
  type: NodePort
