k8s-ci/kubernetes/micro-service-sso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-service-provider-service
  namespace: spring-kubernetes-cloud
spec:
  clusterIP: None
  clusterIPs:
    - None
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  selector:
    app: cloud-service-provider-cloud-starter-deployment
  ports:
    - name: ats
      port: 8000
      protocol: TCP
      targetPort: 8000
  type: ClusterIP
