k8s-ci/kubernetes/micro-service-router-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: spring-kubernetes-cloud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: fff.c1d0010d5a0e74f33accdcf70b78cb120.cn-shanghai.alicontainer.com
      http:
        paths:
          - backend:
              service:
                name: router
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
